Added Markdown Framework Kramdown

--- a/app/assets/stylesheets/reviews.css.scss
+++ b/app/assets/stylesheets/reviews.css.scss
@@ -1,3 +1,5 @@
 // Place all the styles related to the reviews controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+textarea, #preview { width: 500px; height: 150px; margin-bottom: 1em; padding: .5em 1em; }
+#preview { border: 1px solid #666; overflow: auto;}
