--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -3,3 +3,4 @@
 <%= render 'form' %>
  
 <%= link_to 'Back', department_reviews_path(@department) %>
+<script src="/assets/reviews.js" type="text/javascript"></script>
