--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,6 +1,12 @@
+<% content_for :head do %>
+   <link rel="stylesheet" type="text/css" href="/assets/reviews/reviews.css.scss" />
+   <script type="text/javascript" src="/assets/reviews/Markdown.Converter.js"></script>
+   <script type="text/javascript" src="/assets/reviews/Markdown.Sanitizer.js">
+   </script>
+<% end %>
 <h1>Editing review</h1>
  
 <%= render 'form' %>
  
 <%= link_to 'Back', department_reviews_path(@department) %>
-<script src="/assets/reviews.js" type="text/javascript"></script>
+<script src="/assets/reviews/reviews.js" type="text/javascript"></script>
