--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -9,7 +9,7 @@
 </p>
 <p>
   <strong>Image:</strong>
-  <%= @video.img %>
+  <%= image_tag(@video.img, :alt => "rss feed") %>
 </p>
 <p>
   <strong>URL:</strong>
