--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="/assets/jquery.min.js"></script>
     <script type="text/javascript">
         
       var $container  = $( '#flip' ),
