--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.text_field :name %>
   </p>
   <p>
+    <%= f.label :coverUrl %><br>
+    <%= f.text_field :coverUrl %>
+  </p>
+  <p>
     <%= f.label :story %><br>
     <%= f.text_area :story %>
   </p>
