--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Home Page!</h1>
-<%= link_to "All Departments", controller: "departments" %>
+<% content_for :head do %>
+   <link rel="stylesheet" type="text/css" href="/assets/home/cloud.css" />
+   <link rel="stylesheet" type="text/css" href="/assets/welcome.css" />
+<% end %>
+<div id="sidebar">
+	<img class="onemanlogo" src="/assets/home/logopng.png"> 
+	<img class="onemanlogo" src="/assets/home/mottotext.png">
+	<div class='onemanlogo'>
+	    <ul class="navigation">
+	      <li>首页</li>
+	      <li><a href="/departments"> 万门各院系 </a></li>
+	      <li><a href="/xes">万门x项目</li>
+	      <li>万门团队</li>
+	    </ul>
+	</div>
+</div>
+<div id="content">
+		<div id="viewport" >
+			<div id="world" >
+			</div>
+		</div>
+		<div id="home">
+			<div class="centralFrame">
+			<span class="parallaxbg">
+				<p>万门大学是免费的网络大学，致力于降低中国高等教育门槛。</p>
+				<p>万门大学分学科为自学者提供培养计划及教材，有高中基础即可无门槛自学，并将逐步推出中文视频课堂免费发布。</p>
+			</span>
+			</div>
+		</div>
+</div>
+<script type="text/javascript" src="/assets/home/cloud.js"></script>
