Modified Department Home Page

--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -7,18 +7,14 @@
   <img class="onemanlogo" src="/assets/home/mottotext.png">
   <div class='onemanlogo'>
     <ul class="navigation">
-      <li data-slide="1">何为万门</li>
-      <li data-slide="2">万门各院系 </li>
-      <li data-slide="3">万门x项目</li>
-      <li data-slide="4">万门团队</li>
+      <li><a href="/">首页</a></li>
+      <li><a href="/departments">万门各院系</a></li>
+      <li>万门x项目</li>
+      <li>万门团队</li>
     </ul>
   </div>
 </div>
 <div id="content">
-    <div id="viewport" >
-      <div id="world" >
-      </div>
-    </div>
     <div id="home">
       <div class="departmentFrame">
       <ul class="polaroids">
