--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -9,7 +9,7 @@
     <ul class="navigation">
       <li><a href="/">首页</a></li>
       <li><a href="/departments">万门各院系</a></li>
-      <li>万门x项目</li>
+      <li><a href="/xes">万门x项目</a></li>
       <li>万门团队</li>
     </ul>
   </div>
