--- a/app/views/xes/_form.html.erb
+++ b/app/views/xes/_form.html.erb
@@ -20,7 +20,7 @@
   </p>
   <p>
     <%= f.label :lnt %><br>
-    <%= f.text_area :lnt %>
+    <%= f.text_field :lnt %>
   </p>
   <p>
     <%= f.label :address %><br>
@@ -28,9 +28,12 @@
   </p>
   <p>
     <%= f.label :zip %><br>
-    <%= f.text_area :zip %>
+    <%= f.text_field :zip %>
   </p>
- 
+  <p>
+    <%= f.label :rrPage %><br>
+    <%= f.text_field :rrPage %>
+  </p>
   <p>
     <%= f.submit %>
   </p>
