Revert "Solved Merging Conflicts"
This reverts commit 27b16317b55693255ba712abb270a97e9ca4687f.

--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -29,6 +29,19 @@
   </div>
 </div>
 <div id="content">
+    <div id="home">
+      <div class="departmentFrame">
+      <ul class="polaroids">
+        <% @departments.each do |department| %>
+         <li>
+            <a href="<%= department_path(department)%>" title="<%= department.name %>">
+              <img height="150px" src="<%= department.coverUrl%>" alt="<%= department.name %>" />
+            </a>
+          </li>
+        <% end %>
+      </ul>
+      </div>
+    </div>
     <ul class="polaroids">
           <% @departments.each do |department| %>
            <li>
