--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -97,7 +97,7 @@ a:active,a:hover{
 /**
  * Content starts here
  */
-#content {
+#rightblock {
     float:right;
     margin: 0 0 0 0px;
     position:fixed;
