--- a/app/views/departments/new.html.erb
+++ b/app/views/departments/new.html.erb
@@ -14,7 +14,7 @@
       </ul>
   </div>
 </div>
-<div id="content">
+<div id="rightblock">
 	<div class = "centralFrame">
        <h2> 创建一个新的万门大学院系 </h2>
 	</div>
