--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <% content_for :head do %>
+   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css">
    <link rel="stylesheet" type="text/css" href="/assets/home/cloud.css" />
    <link rel="stylesheet" type="text/css" href="/assets/welcome.css" />
 <% end %>
