--- a/app/assets/stylesheets/departments.css.scss
+++ b/app/assets/stylesheets/departments.css.scss
@@ -182,6 +182,8 @@ a:active,a:hover{
     font-size:20px;
     color:rgba(0,86,161,0.9);
     z-index:1;
+    height: 40px;
+    text-align: center;
 }
 /**
  * Wrapper for content, such as lists
@@ -206,20 +208,32 @@ a:active,a:hover{
 /**
  * Fixed lower bar
  */
- .lowbar{
-    z-index: 1;
+.topbar{
+    column-count: 4;
+    column-gap: 20px;
+    height: 350px;
+    /*z-index: 1;
     vertical-align: middle;
-    bottom: 0px;
+    top: 0px;
     right: 0px;
     padding-left: 20px;
     padding-right: 20px;
-    position: absolute;
-    display: block;
+    position: fixed;*/
 
     /*background-color: rgba(0,0,0,0.2);
     box-shadow:inset 0px 2px 2px rgba(0,0,0,0.1);*/
  }
-
+.storyFrame{
+    z-index: 1;
+    display: block;
+    top:20px;
+    left: 15%;
+    padding-left: 100px;
+    padding-right: 100px;
+    width: 70%;
+    position: fixed;
+    overflow: scroll;
+}
 
 /**
  * \brief Choices
@@ -227,59 +241,115 @@ a:active,a:hover{
  * \remarks Currently hidden due to restyling.
  */
 .choice {
-    -moz-box-shadow:inset -32px 16px 46px -34px #bbdaf7;
-    -webkit-box-shadow:inset -32px 16px 46px -34px #bbdaf7;
-    box-shadow:inset -32px 16px 46px -34px #bbdaf7;
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #79bbff), color-stop(1, #378de5) );
-    background:-moz-linear-gradient( center top, #79bbff 5%, #378de5 100% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#79bbff', endColorstr='#378de5');
+
+    -moz-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
+    box-shadow:inset 0px 1px 0px 0px #bbdaf7;
+
     background-color:#79bbff;
+
     -moz-border-radius:6px;
     -webkit-border-radius:6px;
     border-radius:6px;
-    border:3px solid #88b1db;
+
+    border:1px solid #84bbf3;
+
     display:inline-block;
     color:#ffffff;
     font-family:"ff-han";
-    font-size:32px;
-    font-weight:normal;
-    padding:11px 5px;
+    font-weight:bold;
+    padding:5px 2px;
     text-decoration:none;
-    text-shadow:2px 3px 0px #528ecc;
+    opacity: 0.7;
+    text-shadow:0px 1px 0px #528ecc;
     z-index: 2;
-}.choice:hover {
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #378de5), color-stop(1, #79bbff) );
-    background:-moz-linear-gradient( center top, #378de5 5%, #79bbff 100% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#378de5', endColorstr='#79bbff');
+    opacity: 0.6;
+
+}
+.choice:hover {
+    opacity: 1;
     background-color:#378de5;
-}.choice:active {
+}
+.choice:active {
     position:relative;
     top:1px;
 }
+
+
+.css_btn_class {
+    font-size:16px;
+    font-family:"ff-han";
+    font-weight:normal;
+    -moz-border-radius:34px;
+    -webkit-border-radius:34px;
+    border-radius:34px;
+    border:0px solid #eeb44f;
+    padding:9px 18px;
+    text-decoration:none;
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(5%, #ffce79), color-stop(100%, #eeaf41) );
+    background:-moz-linear-gradient( center top, #ffce79 5%, #eeaf41 100% );
+    background:-ms-linear-gradient( top, #ffce79 5%, #eeaf41 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffce79', endColorstr='#eeaf41');
+    background-color:#ffce79;
+    /*color:#ffffff;*/
+    color: white;
+    display:inline-block;
+    text-shadow:1px 1px 6px #ce8e28;
+    -webkit-box-shadow:inset 1px 1px 0px 0px #fceaca;
+    -moz-box-shadow:inset 1px 1px 0px 0px #fceaca;
+    box-shadow:inset 1px 1px 0px 0px #fceaca;
+}.css_btn_class:hover {
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(5%, #eeaf41), color-stop(100%, #ffce79) );
+    background:-moz-linear-gradient( center top, #eeaf41 5%, #ffce79 100% );
+    background:-ms-linear-gradient( top, #eeaf41 5%, #ffce79 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeaf41', endColorstr='#ffce79');
+    background-color:#eeaf41;
+}.css_btn_class:active {
+    position:relative;
+    top:1px;
+}
+
  /**
   * Every item displayed horizontally
   */
-.lowbar.choice:first-child{
-    position: absolute;
-    padding-top: 20px;
-    padding-left: 100px;
-    left: 10%;
-    padding-bottom: 20px;
- }
- .lowbar.choice:nth-child(2){
-    position: absolute;
-    padding-top: 20px;
-    left: 39%;
-    padding-bottom: 20px;
-    padding-left: 100px;
- }
- .lowbar.choice:nth-child(3){
-    position: absolute;
+.css_btn_class:first-child{
+   padding-top: 10px;
+   padding-bottom: 10px;
+   padding-left: 20px;
+   /*left: 10%;
+   width: 25%;
+   padding-bottom: 20px;*/
+   font-size:18px;
+}
+.css_btn_class:nth-child(2){
+   /*position: absolute;
+   padding-top: 20px;
+   left: 39%;
+   padding-bottom: 20px;
+   padding-left: 100px;
+   width: 20%;*/
+   font-size:18px;
+}
+.css_btn_class:nth-child(3){
+    /*position: absolute;
     right:5%;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 300px;
+    width: 20%;*/
+    font-size:18px;
 }
+.css_btn_class:nth-child(4){
+    /*position: absolute;
+    right:0px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 300px;
+    width: 20%;*/
+    font-size:18px;
+}
+
+
 /**
  * end of buttons 
  */
