--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -5,7 +5,22 @@
 <% end %>
 <div id="sidebar">
   <img class="onemanlogo" src="/assets/home/logopng.png"> 
-  <img class="onemanlogo" src="/assets/home/mottotext.png">
+  <div class = "onemanlogo">
+      <center><a class = "css_btn_class" align="middle"> 
+         <%= @department.name %> 
+       </a></center>
+
+      <center><a class="css_btn_class" <%= link_to '看看院系书单', department_booklists_path(@department) %> 
+      </a></center>
+      <center><a class="css_btn_class" 
+        <%= link_to '阅读他人经验', department_reviews_path(@department) %>
+      <center></a></center>
+      <a class="css_btn_class" 
+          <%= link_to '观看院系视频', department_videos_path(@department) %>
+      </a></center>
+
+  </div>  
+  <!--img class="onemanlogo" src="/assets/home/mottotext.png"-->
   <div class='onemanlogo'>
       <ul class="navigation">
         <li>首页</li>
@@ -15,42 +30,13 @@
       </ul>
   </div>
 </div>
+
 <div id="rightblock">
-  <div class = "wrapper">
-	<div class = parallaxbg>
-       <strong>院系名称：</strong>
-         <%= @department.name %> 
-	    </div>
-  <div class = "centralFrame">
+    <div class = "centralFrame">
+
+     <div class = "storyFrame">
         <strong>描述:</strong>
          <div id="story"> <%= raw Kramdown::Document.new(@department.story).to_html %></div>
-  </div>
-</div>
-  <div class="lowbar">
-      <a class="choice" <%= link_to '看看院系书单', department_booklists_path(@department) %> 
-      </a>
-      <a class="choice" 
-        <%= link_to '阅读他人经验', department_reviews_path(@department) %>
-      </a>
-      <a class="choice" 
-          <%= link_to '观看院系视频', department_videos_path(@department) %>
-      </a>
-  </div>
-  <div class='onemanlogo'>
-    <ul class="navigation">
-      <li><a href="/">首页</a></li>
-      <li><%= link_to @department.name+'经验贴', department_reviews_path(@department) %></li>
-      <li><%= link_to @department.name+'视频', department_videos_path(@department) %></li>
-      <li><%= link_to @department.name+'书单', department_booklists_path(@department) %></li>
-    </ul>
-  </div>
-</div>
-<div id="content">
-    <div id="home">
-      <div class="centralFrame">
-      <span class="parallaxbg">
-        <p><%= @department.story%></p>
-      </span>
-    </div>
+     </div>
     </div>
 </div>
