--- a/app/assets/stylesheets/videos/style.css
+++ b/app/assets/stylesheets/videos/style.css
@@ -1,3 +1,22 @@
+#topbar{
+	position: fixed;
+	top: 0px;
+    width: 70%;
+    left: 15%;
+    display: inline;
+    background-color: rgba(0,0,0,0.3);
+    z-index: 3;
+}
+#wrapper{
+	position: relative;
+	width: 100%;
+}
+.menuitem{
+	position: absolute;
+	left: 0%;
+	font-size: 24pt;
+	display: block;
+}
 .banner { position: relative; overflow: auto; }
     .banner li { list-style: none; }
         .banner ul li { float: left; }
