--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,17 +1,42 @@
+
+
 <% content_for :head do %>
-  <link rel="stylesheet" type="text/css" href="/assets/videos/demo.css" />
-  <link rel="stylesheet" type="text/css" href="/assets/videos/style.css" />
-  <script src="/assets/videos/modernizr.custom.97074.js"></script>
+  <link rel="stylesheet" href="/assets/stylesheets/blueprint-css-master/blueprint/src/screen.css" type="text/css" media="screen, projection" />
+<link rel="stylesheet" href="/assets/stylesheets/blueprint-css-master/blueprint/src/print.css" type="text/css" media="print" /> 
+<!--[if lt IE 8]>
+  <link rel="stylesheet" href="/assets/stylesheets/blueprint-css-master/blueprint/src/ie.css" type="text/css" media="screen, projection" />
+<![endif]-->
+
+
+  <!--link rel="stylesheet" type="text/css" href="/assets/videos/demo.css" />
+  <script src="/assets/videos/modernizr.custom.97074.js"></script -->
   <noscript><link rel="stylesheet" type="text/css" href="/assets/videos/noJS.css"/></noscript>
+    <link rel="stylesheet" type="text/css" href="/assets/videos/style.css">
 <% end %>
-<h1><%="万门"+@department.name+"视频" %></h1>
-<div class="banner">
+
+      <div class="container">
+
+        <div id="header" class="span-24 last">
+           <%="万门"+@department.name+"视频" %>
+          
+        </div>
+
+        <hr />
+        <div id="subheader" class="span-24 last">
+          <h3 class="alt">Free online courses and video tutorials</h3>
+        </div>
+       
+        <hr />  
+
+</div>
+<!--div class="banner">
     <ul>
         <li><center><a href="http://www.youku.com"><img src= "http://i1.w.hjfile.cn/doc/201012/Justice82453.jpg"></a></center></li>
         <li><center><a href="http://www.youku.com"><img src= "http://news.xinhuanet.com/newmedia/2011-06/23/121576373_11n.jpg"></a></center></li>
         <li><center><a href="http://www.youku.com"><img src="http://i2.itc.cn/20120216/9f5_29fb99b0_4df1_5673_8c40_d04c905ff4b9_1.jpg"></a></center></li>
     </ul>
-</div>
+</div-->
+
  <section>
         <ul id="da-thumbs" class="da-thumbs">
           <% @videos.each do |video| %>
@@ -24,7 +49,8 @@
           <% end %>
         </ul>
  </section>
- <script type="text/javascript" src="/assets/jquery.min.js"></script>
+ 
+ <!--<script type="text/javascript" src="/assets/jquery.min.js"></script>
     <script type="text/javascript" src="/assets/videos/jquery.hoverdir.js"></script>
   <script src="/assets/videos/unslider.min.js"></script>
     <script type="text/javascript">
@@ -42,4 +68,4 @@
           fluid: false              //  Support responsive design. May break non-responsive designs
         });
       });
-    </script>
+    </script>-->
