--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@department,@review]) do |f| %>
+<%= form_for([:department,@review]) do |f| %>
   <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
