--- a/app/assets/stylesheets/videos.css.scss
+++ b/app/assets/stylesheets/videos.css.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the videos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import url("/blueprint-css-master/blueprint/screen.css");
+@import url("/blueprint-css-master/blueprint/print.css");
