--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,44 +1,50 @@
 
 
 <% content_for :head do %>
-  <link rel="stylesheet" href="/assets/stylesheets/blueprint-css-master/blueprint/src/screen.css" type="text/css" media="screen, projection" />
-<link rel="stylesheet" href="/assets/stylesheets/blueprint-css-master/blueprint/src/print.css" type="text/css" media="print" /> 
+ <link rel="stylesheet" type="text/css" href="/assets/video.css" />
+
+  <link rel="stylesheet" href="../../assets/stylesheets/blueprint-css-master/blueprint/src/screen.css" type="text/css" media="screen, projection" />
+<link rel="stylesheet" href="../../assets/stylesheets/blueprint-css-master/blueprint/src/print.css" type="text/css" media="print" /> 
 <!--[if lt IE 8]>
-  <link rel="stylesheet" href="/assets/stylesheets/blueprint-css-master/blueprint/src/ie.css" type="text/css" media="screen, projection" />
+  <link rel="stylesheet" href="/assets/stylesheets/blueprint-css-master/blueprint/ie.css" type="text/css" media="screen, projection" />
 <![endif]-->
 
 
-  <!--link rel="stylesheet" type="text/css" href="/assets/videos/demo.css" />
-  <script src="/assets/videos/modernizr.custom.97074.js"></script -->
+  <link rel="stylesheet" type="text/css" href="/assets/videos/style.css" >
+  <script src="/assets/videos/modernizr.custom.97074.js"></script>
   <noscript><link rel="stylesheet" type="text/css" href="/assets/videos/noJS.css"/></noscript>
     <link rel="stylesheet" type="text/css" href="/assets/videos/style.css">
 <% end %>
 
-      <div class="container">
+<div class="container">
 
         <div id="header" class="span-24 last">
            <%="万门"+@department.name+"视频" %>
           
         </div>
 
-        <hr />
         <div id="subheader" class="span-24 last">
-          <h3 class="alt">Free online courses and video tutorials</h3>
-        </div>
-       
-        <hr />  
 
-</div>
-<!--div class="banner">
-    <ul>
+          <div class="banner">
+            <ul>
         <li><center><a href="http://www.youku.com"><img src= "http://i1.w.hjfile.cn/doc/201012/Justice82453.jpg"></a></center></li>
         <li><center><a href="http://www.youku.com"><img src= "http://news.xinhuanet.com/newmedia/2011-06/23/121576373_11n.jpg"></a></center></li>
         <li><center><a href="http://www.youku.com"><img src="http://i2.itc.cn/20120216/9f5_29fb99b0_4df1_5673_8c40_d04c905ff4b9_1.jpg"></a></center></li>
-    </ul>
-</div-->
+          </ul>
+         </div>
+        </div>
 
- <section>
-        <ul id="da-thumbs" class="da-thumbs">
+
+    <div class="span-2">
+      The first column 来看一下字体的感觉怎么样？我觉得我们还是放些可爱的button,最好是方形有弧边的。
+    </div>
+    <div class = "span-16">
+      middle column
+    </div>
+    <div class="span-24 last">
+
+       
+        <div id="da-thumbs" class="da-thumbs">
           <% @videos.each do |video| %>
           <li>
             <a href="<%= video.url %>">
@@ -47,10 +53,18 @@
             </a>
           </li>
           <% end %>
-        </ul>
- </section>
+        </div>
+      
+
+    </div>
+    <div class="span-24">
+      The footer
+    </div>
+
+</div>
+
  
- <!--<script type="text/javascript" src="/assets/jquery.min.js"></script>
+ <script type="text/javascript" src="/assets/jquery.min.js"></script>
     <script type="text/javascript" src="/assets/videos/jquery.hoverdir.js"></script>
   <script src="/assets/videos/unslider.min.js"></script>
     <script type="text/javascript">
@@ -68,4 +82,4 @@
           fluid: false              //  Support responsive design. May break non-responsive designs
         });
       });
-    </script>-->
+    </script>
