--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -1,2 +1,29 @@
-<h1>New Video</h1>
-<%= render 'form' %>
+<% content_for :head do %>
+
+   <link rel="stylesheet" href="/assets/stylesheets/blueprint-css-master/blueprint/screen.css" type="text/css" media="screen, projection">
+  <link rel="stylesheet" href="/assets/stylesheets/blueprint-css-master/blueprint/print.css" type="text/css" media="print"> 
+  <!--[if lt IE 8]>
+    <link rel="stylesheet" href="css/blueprint/ie.css" type="text/css" media="screen, projection">
+  <![endif]-->
+ <% end %>
+
+<div class="container">
+  	<div class="span-24">
+  		The header
+  		<%= render 'form' %>
+  	</div>
+
+  	<div class="span-4">
+  		The first column
+  	</div>
+  	<div class="span-16">
+  		The center column
+  	</div>
+  	<div class="span-4 last">
+  		The last column
+  	</div>
+	
+  	<div class="span-24">
+  		The footer
+  	</div>
+</div>
