--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,14 +1,12 @@
 <% content_for :head do %>
-  <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css">
    <link rel="stylesheet" type="text/css" href="/assets/departments.css" />
-   <!--link rel="stylesheet" type="text/css" href="/assets/welcome.css" /-->
 <% end %>
 <div id="sidebar">
   <img class="onemanlogo" src="/assets/home/logopng.png"> 
   <img class="onemanlogo" src="/assets/home/mottotext.png">
   <div class='onemanlogo'>
       <ul class="navigation">
-        <li>首页</li>
+        <li><a href="/">首页</a></li>
         <li><a href="/departments"> 万门各院系 </a></li>
         <li><a href="/xes">万门x项目</a></li>
         <li>万门团队</li>
@@ -18,7 +16,7 @@
 <div id="rightblock">
   <div class="wrapper">
       <span class="parallaxbg">
-        <h3>万门大学现设有41个系，任你选择</h3>
+        <h4>万门大学现设有<%=@departments.length %>个系，任你选择</h4>
       </span>
   </div>
   <div class="centralFrame">
@@ -26,7 +24,7 @@
         <% @departments.each do |department| %>
          <li>
             <a href="<%= department_path(department)%>" title="<%= department.name %>">
-              <img height="150px" src="<%= department.coverUrl%>" alt="<%= department.name %>" />
+              <img class="roundLogo" height="150px" src="<%= department.coverUrl%>" alt="<%= department.name %>" />
             </a>
           </li>
         <% end %>
