--- a/app/assets/stylesheets/departments.css.scss
+++ b/app/assets/stylesheets/departments.css.scss
@@ -113,6 +113,7 @@ a:active,a:hover{
     position:fixed;
     height: 100%;
     right:0px;
+    top:0px;
     width:78%;
     overflow:scroll;
     z-index: 1;
@@ -149,13 +150,18 @@ a:active,a:hover{
  */
 .centralFrame{
     position:relative;
-    top:15px;
+    top:25px;
     left: 0px;
     width: 100%;
     text-align: center;
-    overflow: scroll;
 }
-
+.booklistFrame{
+    position:relative;
+    top:15px;
+    left: 5px;
+    width: 100%;
+    text-align: center;
+}
 
 .parallaxbg{
     position:absolute;
@@ -174,7 +180,6 @@ a:active,a:hover{
         color-stop(0.71, rgba(147,206,238,0.5))
     );*/
     padding-left: 20px;
-    padding-top: 0px;
     padding-right: 20px;
     left:20px;
     right:20px;
@@ -184,6 +189,7 @@ a:active,a:hover{
     z-index:1;
     height: 40px;
     text-align: center;
+    font-family:"ff-han";
 }
 /**
  * Wrapper for content, such as lists
@@ -263,7 +269,6 @@ a:active,a:hover{
     opacity: 0.7;
     text-shadow:0px 1px 0px #528ecc;
     z-index: 2;
-    opacity: 0.6;
 
 }
 .choice:hover {
@@ -274,7 +279,12 @@ a:active,a:hover{
     position:relative;
     top:1px;
 }
-
+.roundLogo{
+    -moz-border-radius:40px;
+    -webkit-border-radius:40px;
+    border-radius:40px;
+    border:0px solid #eeb44f;
+}
 
 .css_btn_class {
     font-size:16px;
@@ -355,9 +365,9 @@ a:active,a:hover{
  */
 
 /* Place all stylesheet code here */
-ul.polaroids { width: 970px; margin: 0 0 18px -30px;}
+ul.polaroids { width: 100%; margin: 40px 0px 0px 0px;}
 ul.polaroids li { display: inline; }
-ul.polaroids a {background: rgba(255,255,255,0.8); display: inline; float: left; margin: 0 0 27px 30px; width: auto; padding: 10px 10px 15px; text-align: center; font-family:'ff-han', sans-serif; text-decoration: none; color: #333; font-size: 18px; -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25); -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25); -webkit-transform: rotate(-2deg); -webkit-transition: -webkit-transform .15s linear; -moz-transform: rotate(-2deg); }
+ul.polaroids a {-moz-border-radius:40px;-webkit-border-radius:40px;border-radius:40px;background: rgba(255,255,255,0.7); display: inline; float: left; margin: 0 0 27px 30px; width: auto; padding: 10px 10px 15px; text-align: center; font-family:'ff-han', sans-serif; text-decoration: none; color: #333; font-size: 18px; -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25); -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25); -webkit-transform: rotate(-2deg); -webkit-transition: -webkit-transform .15s linear; -moz-transform: rotate(-2deg); }
 ul.polaroids img { display: block; width: 190px; margin-bottom: 12px; }
 ul.polaroids a:after { content: attr(title); }
 
@@ -369,7 +379,7 @@ ul.polaroids li:nth-child(11n) a { position: relative; left: -5px; top: 3px; }
 
 ul.polaroids li.messy a { margin-top: -375px; margin-left: 160px; -webkit-transform: rotate(-5deg); -moz-transform: rotate(-5deg); }
 
-ul.polaroids li a:hover { -webkit-transform: scale(1.25); -moz-transform: scale(1.25); -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.5); -moz-box-shadow: 0 3px 6px rgba(0,0,0,.5); position: relative; z-index: 5; }
+ul.polaroids li a:hover { -webkit-transform: scale(1.25); -moz-transform: scale(1.25); -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.5); -moz-box-shadow: 0 3px 6px rgba(0,0,0,.5); position: relative; z-index: 5;background: rgba(0,100,255,0.2);color:white; }
 .departmentFrame{
     position:relative;
     margin-top:2%;
