Added Teams Page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Wanmen</title>
+  <title>万门大学</title>
   <%= yield :head %>
   <%= csrf_meta_tags %>
 </head>
