--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,14 +3,13 @@
    <link rel="stylesheet" type="text/css" href="/assets/welcome.css" />
 <% end %>
 <div id="sidebar">
-	<img class="onemanlogo" src="/assets/home/logopng.png"> 
+	<a href="/"><img class="onemanlogo" src="/assets/home/logopng.png"></a>
 	<img class="onemanlogo" src="/assets/home/mottotext.png">
 	<div class='onemanlogo'>
 	    <ul class="navigation">
-	      <li><a href="/"> 首页</a></li>
 	      <li><a href="/departments"> 万门各院系 </a></li>
 	      <li><a href="/xes">万门x项目</a></li>
-	      <li>万门团队</li>
+	      <li><a href="/teams">万门团队</a></li>
 	    </ul>
 	</div>
 </div>
@@ -27,4 +26,3 @@
 	</div>
 </div>
 <script type="text/javascript" src="/assets/home/cloud.js"></script>
-
