--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -38,7 +38,7 @@ a:active,a:hover{
     left:0px;
     height:100%;
     position:fixed;
-    z-index:1;
+    z-index:500;
     opacity:0.6;
 }
 #sidebar {
@@ -72,6 +72,7 @@ a:active,a:hover{
     z-index:1;
     top:30px;
     width:100%;
+    overflow:scroll;
 }
 .navigation li{
     font-family:'ff-han';/*could be bf*/
