--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -2,14 +2,13 @@
    <link rel="stylesheet" type="text/css" href="/assets/departments.css" />
 <% end %>
 <div id="sidebar">
-  <img class="onemanlogo" src="/assets/home/logopng.png"> 
+  <a href="/"><img class="onemanlogo" src="/assets/home/logopng.png"></a>
   <img class="onemanlogo" src="/assets/home/mottotext.png">
   <div class='onemanlogo'>
       <ul class="navigation">
-        <li><a href="/">首页</a></li>
         <li><a href="/departments"> 万门各院系 </a></li>
         <li><a href="/xes">万门x项目</a></li>
-        <li>万门团队</li>
+        <li><a href="/teams">万门团队</a></li>
       </ul>
   </div>
 </div>
