--- a/app/views/xes/index.html.erb
+++ b/app/views/xes/index.html.erb
@@ -5,27 +5,33 @@
    <link rel="stylesheet" type="text/css" href="/assets/welcome.css" />
 <% end %>
 <div id="sidebar">
-  <img class="onemanlogo" src="/assets/home/logopng.png"> 
+  <a href="/"><img class="onemanlogo" src="/assets/home/logopng.png"></a>
   <img class="onemanlogo" src="/assets/home/mottotext.png">
   <div class='onemanlogo'>
     <ul class="navigation">
-      <li><a href="/">首页</a></li>
-      <li><a href="/departments">万门各院系</a></li>
-      <li><a href="/xes">万门x项目</a></li>
-      <li>万门团队</li>
+      <li><a onClick="addMarkers()">显示所有</a></li>
+       <% i=0;@xes.each do |x| %>
+         <li>
+            <a onClick="showMarker(<%=i%>)">
+              <%= x.name %>
+              <% i=i+1%>
+            </a>
+          </li>
+       <% end %>
     </ul>
   </div>
 </div>
-<div id="content">
-      <div id="home">
-      <button id="loadMarkers" onClick="addMarkers()">在地图上显示</button>
-      <div class="xFrame">
-        <div id="map" style="width:659px;height:400px;border:#F6F6F6 solid 1px;"></div>
+<div id="rightblock">
+  <div class="centralFrame">
+     <span class="parallaxbg">
+      <p>万门X是鼓励大家思辨的线下团体</p>
+     </span>
+     <div id="map" style="width:659px;height:400px;border:#F6F6F6 solid 1px;"></div>
         <%= javascript_tag do %>
          loaded=false;
          mapInit();
          markers=<%=raw @xes.to_json %>;
         <% end %>
-      </div>
     </div>
+  </div>
 </div>
